--- a/csscheatsheet/index.html
+++ b/csscheatsheet/index.html
@@ -1,11 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Cheat Sheet</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
+
 <body>
-    <h1>Hello World</h1>
+    <div class="container">
+        <div class="box-1">
+            <h1>Hello World</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam ratione, expedita repudiandae adipisci
+                quibusdam ullam a sit. Adipisci est nisi asperiores voluptate illo quas, hic, ad vero ullam, molestiae
+                culpa. Facere maxime possimus autem nostrum alias, sit cupiditate ipsam? Assumenda voluptate voluptates,
+                voluptatibus quod ullam ducimus reiciendis vero nesciunt modi! Cupiditate optio expedita sed harum,
+                excepturi delectus aut atque voluptas officia odio officiis possimus ad iste amet a, tenetur ab!
+                Necessitatibus maiores fugit totam soluta optio ratione commodi dolor alias, quo quas aliquid aut
+                voluptatem
+                ducimus, ullam voluptas dolorem? Voluptates nisi culpa natus minus illum corporis, quas eius quisquam
+                iste.
+            </p>
+        </div>
+        <div class="box-2">
+            <h1>Goodbye World</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam ratione, expedita repudiandae adipisci
+                quibusdam ullam a sit. Adipisci est nisi asperiores voluptate illo quas, hic, ad vero ullam, molestiae
+                culpa. Facere maxime possimus autem nostrum alias, sit cupiditate ipsam? Assumenda voluptate voluptates,
+                voluptatibus quod ullam ducimus reiciendis vero nesciunt modi! Cupiditate optio expedita sed harum,
+                excepturi delectus aut atque voluptas officia odio officiis possimus ad iste amet a, tenetur ab!
+                Necessitatibus maiores fugit totam soluta optio ratione commodi dolor alias, quo quas aliquid aut
+                voluptatem
+                ducimus, ullam voluptas dolorem? Voluptates nisi culpa natus minus illum corporis, quas eius quisquam
+                iste.
+            </p>
+            <a class="button" href="">Read More</a>
+        </div>
+        <div class="categories">
+            <h2>Categories</h2>
+            <ul>
+                <li>
+                    <a href="#">Category 1</a>
+                </li>
+                <li>
+                    <a href="#">Category 2</a>
+                </li>
+                <li>
+                    <a href="#">Category 3</a>
+                </li>
+                <li>
+                    <a href="#">Category 4</a>
+                </li>
+            </ul>
+        </div>
+        <form class="my-form">
+            <div class="form-group">
+                <label>Name: </label>
+                <input type="text" name="name">
+            </div>
+            <div class="form-group">
+                <label>Email: </label>
+                <input type="text" name="email">
+            </div>
+            <div class="form-group">
+                <label>Message: </label>
+                <textarea name="message"></textarea>
+            </div>
+            <input class="button" type="submit" value="Submit" name="">
+        </form>
+
+        <div class="block">
+            <h3>Heading</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, nostrum? Porro nisi doloremque omnis molestias! Ipsam esse impedit, exercitationem iusto, a, quae minus voluptatem laborum voluptas accusamus nisi. Cum, in qui incidunt dolor suscipit quia assumenda.</p>
+        </div>
+        <div class="block">
+            <h3>Heading</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, nostrum? Porro nisi doloremque omnis molestias! Ipsam esse impedit, exercitationem iusto, a, quae minus voluptatem laborum voluptas accusamus nisi. Cum, in qui incidunt dolor suscipit quia assumenda.</p>
+        </div>
+        <div class="block">
+            <h3>Heading</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, nostrum? Porro nisi doloremque omnis molestias! Ipsam esse impedit, exercitationem iusto, a, quae minus voluptatem laborum voluptas accusamus nisi. Cum, in qui incidunt dolor suscipit quia assumenda.</p>
+        </div>
+        <div class="clr"></div>
+        <div id="main-block">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, nostrum? Porro nisi doloremque omnis molestias! Ipsam esse impedit, exercitationem iusto, a, quae minus voluptatem laborum voluptas accusamus nisi. Cum, in qui incidunt dolor suscipit quia assumenda.</p>
+        </div>
+        <div id="sidebar">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, nostrum? Porro nisi doloremque omnis molestias! Ipsam esse impedit, exercitationem iusto, a, quae minus voluptatem laborum voluptas accusamus nisi. Cum, in qui incidunt dolor suscipit quia assumenda.</p>
+        </div>
+
+        <div class="clr"></div>
+
+        <div class="p-box">
+            <h1>Hello</h1>
+            <h2>Goodbye</h2>
+        </div>
+
+        <ul class="my-list">
+            <li>List Item</li>
+            <li>List Item</li>
+            <li>List Item</li>
+            <li>List Item</li>
+            <li>List Item</li>
+            <li>List Item</li>
+            <li>List Item</li>
+            <li>List Item</li>
+            <li>List Item</li>
+        </ul>
+    </div><!-- ./container -->
+
+    <a class="fix-me button" href="">Hello</a>
 </body>
-</html> 
+
+</html>
